@@ -1,3 +1,8 @@
+2005-01-04  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (LIBS): Remove.  Was overriding results of configure check.
+	(libMonoPosixHelper_la_LIBADD): List $(GLIB_LIBS) here.
+
 2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Makefile.am: Add libnsl to LIBS.  Hopefully this will let sparc link.
